--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -68,7 +68,6 @@
         height: 35px;
         margin-right: 25px;
         position: absolute;
-        top: 0;
         right: 0;
       }
     }
