--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -180,4 +180,8 @@ body.stripes {
   body.stripes {
     background: none;
   }
+
+  .container {
+    overflow: hidden;
+  }
 }
