--- a/src/styles/_resume.scss
+++ b/src/styles/_resume.scss
@@ -1,4 +1,9 @@
-.resume {
+.resume__title {
+  font-size: 2em;
+  text-align: center;
+}
+
+.resume__container {
   padding-top: 4em;
   width: calc(100% - 10%);
   max-width: 1400px;
@@ -18,7 +23,8 @@
 }
 
 @media (max-width: 769px) {
-  .resume {
+  .resume__container {
+    padding-top: 0;
     width: 100% !important;
     max-width: 100% !important;
   }
